src/Parser/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
import java.util.*;
import ASTNodes.*;
import Env.*;
import Error.*;


public class Parser implements ParserConstants {

  static final public ASTNode Start() throws ParseException {
  ASTNode t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 0:
      jj_consume_token(0);
           {if (true) return null;}
      break;
    case LET:
    case TRUE:
    case FALSE:
    case MINUS:
    case STAR:
    case LPAR:
    case NOT:
    case BOX:
    case IF:
    case WHILE:
    case PRINT:
    case PRINTLN:
    case FN:
    case Id:
    case Num:
      t = Let();
      jj_consume_token(TERM);
                       {if (true) return t;}
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Let() throws ParseException {
  Token n;
  ASTNode t, e1, e2;
  List<Bind> decls  = new ArrayList<Bind>();;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case MINUS:
    case STAR:
    case LPAR:
    case NOT:
    case BOX:
    case IF:
    case WHILE:
    case PRINT:
    case PRINTLN:
    case FN:
    case Id:
    case Num:
      t = Seq();
      break;
    case LET:
      label_1:
      while (true) {
        jj_consume_token(LET);
        n = jj_consume_token(Id);
        jj_consume_token(EQUAL);
        e1 = BA();
        jj_consume_token(SEMIC);
        decls.add(new Bind(n.image,e1));
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LET:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
      }
      e2 = Seq();
                     t = new ASTLet(decls, e2);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Seq() throws ParseException {
 Token op;
  ASTNode t1, t2;
    t1 = SeqExp();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMIC:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      op = jj_consume_token(SEMIC);
      t2 = SeqExp();

    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode SeqExp() throws ParseException {
 Token op;
  ASTNode t1, t2;
    t1 = BA();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      op = jj_consume_token(ASSIGN);
      t2 = BA();

    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode BA() throws ParseException {
 Token op;
  ASTNode t1, t2;
    t1 = BM();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_4;
      }
      op = jj_consume_token(OR);
      t2 = BM();

    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode BM() throws ParseException {
 Token op;
  ASTNode t1, t2;
    t1 = Rel();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_5;
      }
      op = jj_consume_token(AND);
      t2 = Rel();

    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Rel() throws ParseException {
 Token op;
  ASTNode t1, t2;
    t1 = Exp();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQ:
    case GT:
    case LT:
    case GTEQ:
    case LTEQ:
    case DIF:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQ:
        op = jj_consume_token(EQ);
        break;
      case GT:
        op = jj_consume_token(GT);
        break;
      case LT:
        op = jj_consume_token(LT);
        break;
      case GTEQ:
        op = jj_consume_token(GTEQ);
        break;
      case LTEQ:
        op = jj_consume_token(LTEQ);
        break;
      case DIF:
        op = jj_consume_token(DIF);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t2 = Exp();

      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Exp() throws ParseException {
  Token op;
  ASTNode t1, t2;
    t1 = Term();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        op = jj_consume_token(PLUS);
        break;
      case MINUS:
        op = jj_consume_token(MINUS);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t2 = Term();
                   if (op.kind == PLUS)
                         t1 = new ASTPlus(t1,t2);
                   else  t1 = new ASTSub(t1,t2);
    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Term() throws ParseException {
 Token op;
  ASTNode t1, t2;
    t1 = Fact();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STAR:
      case DIV:
      case LPAR:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STAR:
        op = jj_consume_token(STAR);
        t2 = Fact();
                                           t1 = new ASTMult(t1,t2);
        break;
      case DIV:
        op = jj_consume_token(DIV);
        t2 = Fact();
                                         t1 = new ASTDiv(t1,t2);
        break;
      case LPAR:
        op = jj_consume_token(LPAR);
        t2 = Exp();
        jj_consume_token(RPAR);

        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
       {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Fact() throws ParseException {
  Token n;
  ASTNode t, e1, e2;
  List<Bind> decls;
  ASTNode  body, alt;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Num:
      n = jj_consume_token(Num);
                t = new ASTInt(Integer.parseInt(n.image));
      break;
    case TRUE:
      n = jj_consume_token(TRUE);
                 /* missing AST for true */; t = null;
      break;
    case FALSE:
      n = jj_consume_token(FALSE);
                   /* missing AST for false */; t = null;
      break;
    case Id:
      n = jj_consume_token(Id);
               t = new ASTId(n.image);
      break;
    case BOX:
      jj_consume_token(BOX);
      t = Fact();
                       /* missing AST for box */; t = null;
      break;
    case STAR:
      jj_consume_token(STAR);
      t = Fact();
                        /* missing AST for deref */; t = null;
      break;
    case MINUS:
      jj_consume_token(MINUS);
      t = Fact();
                         t = new ASTNeg(t);
      break;
    case NOT:
      jj_consume_token(NOT);
      t = Fact();
                        /* missing AST for not */; t = null;
      break;
    case IF:
      jj_consume_token(IF);
      t = BA();
      jj_consume_token(LBRA);
      e1 = Let();
      jj_consume_token(RBRA);
      jj_consume_token(ELSE);
      jj_consume_token(LBRA);
      e2 = Let();
      jj_consume_token(RBRA);
                                                                        /* TBC */ t = null;
      break;
    case WHILE:
      jj_consume_token(WHILE);
      t = BA();
      jj_consume_token(LBRA);
      body = Let();
      jj_consume_token(RBRA);
                                                /* TBC */ t = null;
      break;
    case FN:
      jj_consume_token(FN);
      n = jj_consume_token(Id);
                    t = null;
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_8;
        }
        jj_consume_token(COMMA);
        n = jj_consume_token(Id);

      }
      jj_consume_token(ARROW);
      jj_consume_token(LBRA);
      e2 = Let();
      jj_consume_token(RBRA);

      break;
    case PRINT:
      jj_consume_token(PRINT);
      t = Fact();
                         /* missing AST for print */; t = null;
      break;
    case PRINTLN:
      jj_consume_token(PRINTLN);
      t = Fact();
                          /* missing AST for println */; t = null;
      break;
    case LPAR:
      jj_consume_token(LPAR);
      t = Let();
      jj_consume_token(RPAR);
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public ParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[15];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0xa00016e1,0x20,0xa00016e0,0x40000,0x40000000,0x400000,0x200000,0x1f800000,0x1f800000,0x300,0x300,0x1c00,0x1c00,0x100000,0xa00016c0,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x33d,0x0,0x33d,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x33d,};
   }

  /** Constructor with InputStream. */
  public Parser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Parser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Parser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Parser(ParserTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[42];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 15; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 42; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
